--- a/wsgi/src/templates/accounts/login.html
+++ b/wsgi/src/templates/accounts/login.html
@@ -1,7 +1,31 @@
-<html><head><title>CustomerReference</title></head>
-<body>
-<h1>WHO ARE YOU???</h1>
-<ul>
+<html>
+<head>
+	<link href="<s:url value='/css/base.css' />" rel="stylesheet"	type="text/css" media="all" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> </meta>
+	<title>Pease Login </title>
+</head>
+
+<body style="background: #eee; ">
+
+<div style="position: absolute; top: 25%; left: 35%; width: 30%; height: 40%;" >
+
+<form  method="post">
+{% csrf_token %}
+<table style="margin: auto; border: 1px solid; background: green; ">
+	<thead>
+		<tr><th colspan="2" style="padding: 2px 2px 20px 2px; margin: 0;"><h2 style="background: #3f3e3e 0 2px; margin: 0;padding: 5px 3px;color: white;">Login Information</h2></th></tr>
+	</thead>
+	<tbody>
+		<tr><td style="text-align: right; width: 45%;">Username</td><td style="text-align: left;"><input type="text" name="j_username" /></td></tr>
+		<tr><td style="text-align: right; width: 45%;">Password</td><td style="text-align: left;"><input type="password" name="j_password" /></td></tr>
+		<tr><td></td><td><input type='submit'  /></td></tr>				
+	</tbody>	
+        <tfoot>
+	</tfoot>
+</table>
+</form> 
+
+</div>
+
 </body>
 </html>
-
