home page title fix

--- a/wsgi/src/templates/index.html
+++ b/wsgi/src/templates/index.html
@@ -1,6 +1,9 @@
 <html><head><title>CustomerReference</title></head>
 <body>
-<h1>CustomerReference</h1>
-<ul>
+
+<h1>Welcome To The CustomerReference</h1>
+
+<a href='secure'>secure page</a>
+
 </body>
 </html>
