--- a/wsgi/src/templates/index.html
+++ b/wsgi/src/templates/index.html
@@ -1,5 +1,5 @@
 <html><head><title>CustomerReference</title></head>
-<body>
+<body style="background: #eee; ">
 
 <h1>Welcome To The CustomerReference</h1>
 
