--- a/wsgi/src/templates/secure.html
+++ b/wsgi/src/templates/secure.html
@@ -1,5 +1,5 @@
 <html><head><title>CustomerReference</title></head>
-<body>
+<body style="background: #eee; ">
 <h1>Secure-CustomerReference</h1>
 <ul>
 </body>
