add application wide look&feel through decorator.html

--- a/wsgi/src/templates/index.html
+++ b/wsgi/src/templates/index.html
@@ -1,9 +1,10 @@
-<html><head><title>CustomerReference</title></head>
-<body style="background: #eee; ">
+{% extends "decorator.html" %}
 
+{% block title %} Welcome To The CustomerReference App {% endblock %}
+
+{% block content %}
 <h1>Welcome To The CustomerReference</h1>
 
 <a href='secure'>secure page</a>
 
-</body>
-</html>
+{% endblock %}
