--- a/wsgi/src/templates/secure.html
+++ b/wsgi/src/templates/secure.html
@@ -1,3 +1,4 @@
+{% extends "decorator.html" %}
 <html><head><title>CustomerReference</title></head>
 <body style="background: #eee; ">
 <h1>Secure-CustomerReference</h1>
