--- a/wsgi/src/templates/accounts/login.html
+++ b/wsgi/src/templates/accounts/login.html
@@ -1,31 +1,24 @@
-<html>
-<head>
-	<link href="<s:url value='/css/base.css' />" rel="stylesheet"	type="text/css" media="all" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> </meta>
-	<title>Pease Login </title>
-</head>
+{% extends "decorator.html" %}
 
-<body style="background: #eee; ">
+{% block title %} Please Sign In {% endblock %}
 
-<div style="position: absolute; top: 25%; left: 35%; width: 30%; height: 40%;" >
+{% block content %}
 
-<form  method="post">
-{% csrf_token %}
-<table style="margin: auto; border: 1px solid; background: green; ">
+	<form  method="post">
+	
+	{% csrf_token %}
+	<table style="margin: auto; border: 1px solid; background: green; ">
 	<thead>
 		<tr><th colspan="2" style="padding: 2px 2px 20px 2px; margin: 0;"><h2 style="background: #3f3e3e 0 2px; margin: 0;padding: 5px 3px;color: white;">Login Information</h2></th></tr>
 	</thead>
 	<tbody>
-		<tr><td style="text-align: right; width: 45%;">Username</td><td style="text-align: left;"><input type="text" name="j_username" /></td></tr>
-		<tr><td style="text-align: right; width: 45%;">Password</td><td style="text-align: left;"><input type="password" name="j_password" /></td></tr>
-		<tr><td></td><td><input type='submit'  /></td></tr>				
+	        {{ form.as_p }}
+		<tr><td> {{username}}</td><td><input type='submit'  /></td></tr>				
 	</tbody>	
         <tfoot>
 	</tfoot>
-</table>
-</form> 
+	</table>
+	
+	</form> 
 
-</div>
-
-</body>
-</html>
+{% endblock content %}
