--- a/wsgi/src/templates/accounts/login.html
+++ b/wsgi/src/templates/accounts/login.html
@@ -5,20 +5,9 @@
 {% block content %}
 
 	<form  method="post">
-	
 	{% csrf_token %}
-	<table style="margin: auto; border: 1px solid; background: green; ">
-	<thead>
-		<tr><th colspan="2" style="padding: 2px 2px 20px 2px; margin: 0;"><h2 style="background: #3f3e3e 0 2px; margin: 0;padding: 5px 3px;color: white;">Login Information</h2></th></tr>
-	</thead>
-	<tbody>
-	        {{ form.as_p }}
-		<tr><td> {{username}}</td><td><input type='submit'  /></td></tr>				
-	</tbody>	
-        <tfoot>
-	</tfoot>
-	</table>
-	
+        {{ form.as_p }}
+	<input type='submit'  /> 
 	</form> 
 
 {% endblock content %}
