--- a/wsgi/src/templates/decorator.html
+++ b/wsgi/src/templates/decorator.html
@@ -1,37 +1,61 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/static/css/style.css" />
+    <link rel="stylesheet" href="/static/css/csr-style.css" />
+    <link rel="stylesheet" href="/static/css/redmond/jquery-ui-1.8.16.custom.css" />
+    <script type='text/javascript' src='/static/js/jquery-1.7.1.min.js'></script>
+    <script type='text/javascript' src='/static/js/jquery-ui-1.8.16.custom.min.js'></script>
+    <script type='text/javascript' src='/static/js/jquery.form.js'></script>
+    <script type='text/javascript' src='/static/js/csr.js'></script>
     <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
 
-<body>
+<body id="cols3">
 
-<div id="body-wrapper">
-		<div id="header">
-			<h1><img height="20px" alt="StatIT Consulting" src="<s:url value='/images/logo.gif' />"  /></h1>
-			<h2><img alt="...your partner in market innovation." src="<s:url value='/images/your-partner-in-market-innovation.gif' />"/> </h2>
-			<div id="headerlinks"> 
-				<a href="http://www.statit-consulting.com"> Home </a>  | 
-				<a href="/accounts/logout/">Logout </a>
+<div id="wrapper">
+		<div id="header">	
+ 			<h1><img src="/static/css/logo.gif" alt="TravelGo.com" /></h1>
+			 <h2><img src="/static/css/getting-you-there.gif" alt="Getting you there since 1972" /></h2>
+		
+			<div class="headerlinks">  
+				<a href="/accounts/login/">Login</a>
 			</div>
 		</div>
-		<div id="tabsnavig" class="clearfix">
+				
+		<div id="tablinks" class="clearfix">
 			<ul>
-
-<li id="produits"  class='selected' title="<s:text name='menu.products'/>"><a href="products/main"><s:text name="produits._main.tabName"/></a></li>
-<li id="solutions" title="<s:text name='menu.products'/>"><a href="products/main"><s:text name="produits._main.tabName"/></a></li>
-<li id="support"   title="<s:text name='menu.products'/>"><a href="products/main"><s:text name="produits._main.tabName"/></a></li>			
-<li id="training"  title="<s:text name='menu.products'/>"><a href="products/main"><s:text name="produits._main.tabName"/></a></li>
-<li id="partners"  title="<s:text name='menu.products'/>"><a href="products/main"><s:text name="produits._main.tabName"/></a></li>
-</ul>
+				<li id="produits"  ><a href="/home/">{% trans "Home" %}</a></li>
+				<li id="solutions" ><a href="/what-s-hot/">{% trans "What's Hot" %}</a></li>
+				<li id="support"   ><a href="/add-customer/" class='selected'>{% trans "Add Customer" %}</a></li>			
+				<li id="training"  ><a href="/add-reference/">{% trans "Add Reference" %}</a></li>
+				<li id="partners"  ><a href="/help/">{% trans "Help" %}</a></li>
+			</ul>
+			<div class="headerlinks">  
+				<a href="/accounts/login/" id="login-status">Login</a>
+			</div>		
 		</div>
+		<div id="breadcrumb">You are here: <a href="/customers//">Customers</a> &gt; <a href="/add-customer/">Add Customer</a></div>
 		<div id="content-wrapper">		
 			<div id="content-inner"> {% block content %}{% endblock %}</div> 
 		</div>
+		<div id="navigation">
+ 			<ul>	
+
+			<li><a href="/linkdest1/">Industries</a></li>
+ 		        <li><a href="/linkdest2/">Education</a></li>
+			<li><a href="/linkdest3/">Financial</a></li>
+			<li><a href="/linkdest4/">Goverment</a></li>
+			<li><a href="/linkdest5/">Telecommunications</a></li>
+			<li><a href="/linkdest6/">Oil and Gas</a></li>
+			<li><a href="/linkdest7/">Healthcare</a></li>
+			</ul>
+
+ 		</div>
+		
 		<div id="footer">
 			<address>
-				<a href="mailto: rotoudjimaye.theo@gmail.com"	style=" font-weight: bold; color: black;">&copy; ROTOUDJIMAYE Théophile, 2009 </a>
+				<a href="mailto:info@example.com"	style=" font-weight: bold; color: black;">&copy; Legal Notice </a>
 			</address>
 		</div>
 </div>
