--- a/wsgi/src/templates/index.html
+++ b/wsgi/src/templates/index.html
@@ -3,8 +3,7 @@
 {% block title %} Welcome To The CustomerReference App {% endblock %}
 
 {% block content %}
-<h1>Welcome To The CustomerReference</h1>
 
-<a href='secure'>secure page</a>
+<h3>Customer References</h3>
 
 {% endblock %}
