--- a/wsgi/src/templates/decorator.html
+++ b/wsgi/src/templates/decorator.html
@@ -26,16 +26,16 @@
 		<div id="tablinks" class="clearfix">
 			<ul>
 				<li id="produits"  ><a href="/home/">{% trans "Home" %}</a></li>
-				<li id="solutions" ><a href="/what-s-hot/">{% trans "What's Hot" %}</a></li>
-				<li id="support"   ><a href="/add-customer/" class='selected'>{% trans "Add Customer" %}</a></li>			
-				<li id="training"  ><a href="/add-reference/">{% trans "Add Reference" %}</a></li>
+				<li id="solutions" ><a href="/what_s_hot/">{% trans "What's Hot" %}</a></li>
+				<li id="support"   ><a href="/add_customer/" class='selected'>{% trans "Add Customer" %}</a></li>			
+				<li id="training"  ><a href="/add_reference/">{% trans "Add Reference" %}</a></li>
 				<li id="partners"  ><a href="/help/">{% trans "Help" %}</a></li>
 			</ul>
 			<div class="headerlinks">  
 				<a href="/accounts/login/" id="login-status">Login</a>
 			</div>		
 		</div>
-		<div id="breadcrumb">You are here: <a href="/customers//">Customers</a> &gt; <a href="/add-customer/">Add Customer</a></div>
+		<div id="breadcrumb">You are here: <a href="/customers/">Customers</a> &gt; <a href="/add-customer/">Add Customer</a></div>
 		<div id="content-wrapper">		
 			<div id="content-inner"> {% block content %}{% endblock %}</div> 
 		</div>
