--- a/wsgi/src/templates/add_customer.html
+++ b/wsgi/src/templates/add_customer.html
@@ -1,7 +1,13 @@
 {% extends "decorator.html" %}
 
-{% block title %} Add Customer {% endblock title %}
+{% block title %} Add Customer {% endblock %}
 
 {% block content %}
-<h3> Add Customer </h3>
+        <h3> Add Customer </h3>
+	<form  method="post">
+	{% csrf_token %}
+        {{ form.as_p }}
+	<input type='submit'  /> 
+	</form> 
+
 {% endblock content %}
