--- a/wsgi/src/templates/customers.html
+++ b/wsgi/src/templates/customers.html
@@ -4,4 +4,32 @@
 
 {% block content %}
 <h3> Customers </h3>
+
+
+<table class="customers">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>E-mail</th>
+      <th>Website</th>
+      <th>Geography</th>
+      <th>Industry</th>
+      <th>Is Public</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for c in customers %}
+    <tr>
+      <td>{{ c.name }}</td>
+      <td>{{ c.email }}</td>
+      <td>{{ c.website }}</td>
+      <td>{{ c.get_geography }}</td>
+      <td>{{ c.get_industry }}</td>
+      <td>{{ c.ispublic }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+
+</table>
+
 {% endblock content %}
