--- a/wsgi/src/templates/decorator.html
+++ b/wsgi/src/templates/decorator.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/static/css/csr-style.css" />
+    <link rel="stylesheet" href="/static/css/base.css" />
     <link rel="stylesheet" href="/static/css/redmond/jquery-ui-1.8.16.custom.css" />
     <script type='text/javascript' src='/static/js/jquery-1.7.1.min.js'></script>
     <script type='text/javascript' src='/static/js/jquery-ui-1.8.16.custom.min.js'></script>
@@ -23,6 +23,7 @@
 <body id="cols3">
 
 <div id="wrapper">
+<!--
 		<div id="header">	
  			<h1><img src="/static/css/logo.gif" alt="TravelGo.com" /></h1>
 			 <h2><img src="/static/css/getting-you-there.gif" alt="Getting you there since 1972" /></h2>
@@ -30,7 +31,7 @@
 			<div class="headerlinks"> 
 				<a href="/accounts/login/">Login</a> 
 			</div>
-		</div>
+		</div> -->
 				
 		<div id="tablinks" class="clearfix">
 			<ul>
