implement voting feature for reference posts

--- a/wsgi/src/templates/decorator.html
+++ b/wsgi/src/templates/decorator.html
@@ -43,10 +43,10 @@
 			</ul>
 			<div class="headerlinks"> 
 			   {% if user %} 
-				<a href="/accounts/login/" id="login-status">{{ user }}</a> | 
+				<a href="/accounts/account/" id="login-status">{{ user }}</a> | 
 				<a id="logout-link" href="/accounts/logout/">Logout</a> 
 			   {% else %}
-				<a href="/accounts/login/" id="login-status">Login</a> | 
+				<a href="/accounts/login/" id="login-link">Login</a> | 
 				<a id="logout-link" href="/accounts/logout/" style="visibility: hidden;">Logout</a> 				
 			    {% endif %}
 			</div>		
