--- a/wsgi/src/templates/add_reference.html
+++ b/wsgi/src/templates/add_reference.html
@@ -2,6 +2,10 @@
 
 {% block title %} Add Customer Reference {% endblock %}
 
+{% block breadcrumb %}
+<a href="/references/">References</a> &gt; <a href="/add_reference/">Add Reference</a>
+{% endblock breadcrumb %}
+
 {% block content %}
         <h3> Add Reference </h3>
 	<form  method="POST" encoding='multipart/form-data' >
