--- a/wsgi/src/templates/customers.html
+++ b/wsgi/src/templates/customers.html
@@ -2,6 +2,11 @@
 
 {% block title %} Customers {% endblock title %}
 
+{% block breadcrumb %}
+<a href="/customers/">Customers</a>
+<a href="/add_customer/" style="float: right;">Add Customer</a>
+{% endblock breadcrumb %}
+
 {% block content %}
 <h3> Customers </h3>
 
