--- a/wsgi/src/templates/references.html
+++ b/wsgi/src/templates/references.html
@@ -2,6 +2,11 @@
 
 {% block title %} Customer References {% endblock title %}
 
+{% block breadcrumb %}
+<a href="/references/">References</a>
+<a href="/add_reference/" style="float: right;">Add Reference</a>
+{% endblock breadcrumb %}
+
 {% block content %}
 <h3> Customer References </h3>
 
