--- a/wsgi/src/templates/add_customer.html
+++ b/wsgi/src/templates/add_customer.html
@@ -2,6 +2,10 @@
 
 {% block title %} Add Customer {% endblock %}
 
+{% block breadcrumb %}
+<a href="/customers/">Customers</a> &gt; <a href="/add_customer/">Add Customer</a>
+{% endblock breadcrumb %}
+
 {% block content %}
         <h3> Add Customer </h3>
 	<form  method="post">
