--- a/wsgi/src/templates/decorator.html
+++ b/wsgi/src/templates/decorator.html
@@ -37,8 +37,8 @@
 			<ul>
 				<li id="home"  ><a href="/home/">{% trans "Home" %}</a></li>
 				<li id="what_s_hot" ><a href="/what_s_hot/">{% trans "What's Hot" %}</a></li>
-				<li id="add_customer"   ><a href="/add_customer/">{% trans "Add Customer" %}</a></li>			
-				<li id="add_reference"  ><a href="/add_reference/">{% trans "Add Reference" %}</a></li>
+				<li id="customers"   ><a href="/customers/">{% trans "Customers" %}</a></li>			
+				<li id="references"  ><a href="/references/">{% trans "References" %}</a></li>
 				<li id="help"  ><a href="/help/">{% trans "Help" %}</a></li>
 			</ul>
 			<div class="headerlinks"> 
@@ -51,7 +51,12 @@
 			    {% endif %}
 			</div>		
 		</div>
-		<div id="breadcrumb">You are here: <a href="/customers/">Customers</a> &gt; <a href="/add-customer/">Add Customer</a></div>
+		<div id="breadcrumb">You are here:
+		  {% block breadcrumb %}
+		  <!-- <a href="/customers/">Customers</a> --
+		    -- &gt; <a href="/add-customer/">Add Customer</a> -->
+		  {% endblock breadcrumb %}
+		</div>
 		<div id="content-wrapper">		
 			<div id="content-inner"> {% block content %}{% endblock %}</div> 
 		</div>
