--- a/wsgi/src/templates/what_s_hot.html
+++ b/wsgi/src/templates/what_s_hot.html
@@ -2,6 +2,39 @@
 
 {% block title %} What's Hot {% endblock title %}
 
+{% block breadcrumb %}
+<a href="/home/">Home</a>
+&gt; <a href="/what_s_hot/">What's Hot</a>
+{% endblock breadcrumb %}
+
+
 {% block content %}
 <h3> What's Hot </h3>
+
+<table class="customers">
+  <thead>
+    <tr>
+      <th>Score</th>
+      <th>Title</th>
+      <th>Customer</th>
+      <th>Is Public</th>
+      <th>My Vote</th>
+      <th>Total Votes</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for r in references %}
+    <tr>
+      <td>{{ r.hotness }}</td>
+      <td><a href="/reference/{{r.id}}">{{ r.title }}</a></td>
+      <td>{{ r.customer }}</td>
+      <td>{{ r.ispublic }}</td>
+      <td>{% if r.my_vote %}done{% else %}<a href='/reference/vote/{{r.id}}'>cast</a>{% endif %}</td>
+      <td>{{ r.votes }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+
+</table>
+
 {% endblock content %}
