voting feature implementation

--- a/wsgi/src/templates/references.html
+++ b/wsgi/src/templates/references.html
@@ -16,6 +16,7 @@
     <tr>
       <th>Title</th>
       <th>Customer</th>
+      <th>By</th>
       <th>Is Public</th>
       <th>My Vote</th>
       <th>Total Votes</th>
@@ -27,6 +28,7 @@
     <tr>
       <td><a href="/reference/{{r.id}}">{{ r.title }}</a></td>
       <td>{{ r.customer }}</td>
+      <td>{{ r.submitter }}</td>
       <td>{{ r.ispublic }}</td>
       <td>{% if r.my_vote %}done{% else %}<a href='/reference/vote/{{r.id}}'>cast</a>{% endif %}</td>
       <td>{{ r.votes }}</td>
