--- a/wsgi/src/csr/static/css/csr-style-dialog.css
+++ b/wsgi/src/csr/static/css/csr-style-dialog.css
@@ -21,19 +21,21 @@ table.customers caption {
 }
 
 /* entityItems */
-.formFrame table.customers th {
+table.customers th {
 	background-color: #cfcfcf;
 	color: #36648B;
 	text-align: left;
 	padding: 2px .25em 2px .25em;
 	border-bottom: 1px solid #36648B;
 	border-left: 1px solid #36648B;
+	white-space: nowrap;
 }
 
 table.customers td {
 	padding-left: .5em;
 	border-left: 1px solid #36648B;
-	padding: 2px .5em 2px .5em;
+	border-top: 1px solid #36648B;
+	padding: 1em .5em 1em .5em;
 	/* border: 1px solid #36648B; */
 }
 
