--- a/wsgi/src/templates/what_s_hot.html
+++ b/wsgi/src/templates/what_s_hot.html
@@ -14,12 +14,12 @@
 <table class="customers">
   <thead>
     <tr>
-      <th>Score</th>
+      <th>Hotness</th>
       <th>Title</th>
       <th>Customer</th>
-      <th>Is Public</th>
-      <th>My Vote</th>
       <th>Total Votes</th>
+      <th>My Vote</th>
+      
     </tr>
   </thead>
   <tbody>
@@ -28,9 +28,8 @@
       <td>{{ r.hotness }}</td>
       <td><a href="/reference/{{r.id}}">{{ r.title }}</a></td>
       <td>{{ r.customer }}</td>
-      <td>{{ r.ispublic }}</td>
-      <td>{% if r.my_vote %}done{% else %}<a href='/reference/vote/{{r.id}}'>cast</a>{% endif %}</td>
       <td>{{ r.votes }}</td>
+      <td>{% if r.my_vote %}done{% else %}<a href='/reference/vote/{{r.id}}'>cast</a>{% endif %}</td>  
     </tr>
     {% endfor %}
   </tbody>
